--- a/src/app/features/dashboard/components/council-view/council-view.component.html
+++ b/src/app/features/dashboard/components/council-view/council-view.component.html
@@ -1,1 +1,31 @@
-<p>council-view works!</p>
+<div class="council">
+
+<button class="summon" (click)="startCouncil()">
+⚖️ Convocar Consejo
+</button>
+
+<div class="stage">
+
+<div class="judge perso" [class.show]="judges()[0].visible">
+<img [src]="judges()[0].image">
+<div class="vote">{{judges()[0].vote?.nombre}}</div>
+</div>
+
+<div class="judge miku" [class.show]="judges()[1].visible">
+<img [src]="judges()[1].image">
+<div class="vote">{{judges()[1].vote?.nombre}}</div>
+</div>
+
+<div class="judge bobi" [class.show]="judges()[2].visible">
+<img [src]="judges()[2].image">
+<div class="vote">{{judges()[2].vote?.nombre}}</div>
+</div>
+
+</div>
+
+<div class="final" *ngIf="winner()">
+⚖️ DECISIÓN FINAL:
+<strong>{{winner()?.nombre}}</strong>
+</div>
+
+</div>
