--- a/src/app/features/dashboard/components/wheel-view/wheel-view.component.css
+++ b/src/app/features/dashboard/components/wheel-view/wheel-view.component.css
@@ -41,19 +41,12 @@
 }
 
 .slice{
-
  position:absolute;
  width:100%;
  height:100%;
-
  background:#1a1a1a;
-
- /* divisor REAL */
- border-left:2px solid rgba(255,215,0,.8);
-
+ border-right:2px solid gold;
  transform-origin:0% 0%;
-
- box-sizing:border-box;
 }
 
 .segment:nth-child(even) .slice{
@@ -180,16 +173,3 @@
   filter:brightness(1.3);
  }
 }
-.segment:first-child .slice{
- border-left:2px solid rgba(255,215,0,.8);
-}
-.slice::before{
- content:'';
- position:absolute;
- top:0;
- left:0;
- width:2px;
- height:100%;
- background:gold;
-}
-
